--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -113,8 +113,10 @@
 													<li class="me-2">
 														<i class="fa fa-eye"></i>
 													</li>
-													<li class="me-2">
-														<i class="fa fa-heart"></i>
+													<li class="me-2 active">
+														<a href="{{ path('app_bien_add_to_favs', {'id' : bien.id}) }}">
+															<i class="fa fa-heart"></i>
+														</a>
 													</li>
 												</ul>
 											</div>
