--- a/templates/afficher_bien/index.html.twig
+++ b/templates/afficher_bien/index.html.twig
@@ -8,19 +8,19 @@
 	<section class="breadcrumb-main pb-0 pt-20" style="background-image: url(images/bg/bg2.jpg);">
 		<div
 			class="breadcrumb-outer"><!--	<div class="container">
-																																																																								<div class="breadcrumb-content d-md-flex align-items-center pt-6">
-																																																																									<h1 class="mb-0">Listing With Fullwidth</h1>
-																																																																									<nav aria-label="breadcrumb">
-																																																																										<ul class="breadcrumb">
-																																																																											<li class="breadcrumb-item">
-																																																																												<a href="#">Home</a>
-																																																																											</li>
-																																																																											<li class="breadcrumb-item active" aria-current="page">Listing With Fullwidth</li>
-																																																																										</ul>
-																																																																									</nav>
-																																																																								</div>
-																																																																							</div>
-																																																																							-->
+																																																																																																																																																																																								<div class="breadcrumb-content d-md-flex align-items-center pt-6">
+																																																																																																																																																																																									<h1 class="mb-0">Listing With Fullwidth</h1>
+																																																																																																																																																																																									<nav aria-label="breadcrumb">
+																																																																																																																																																																																										<ul class="breadcrumb">
+																																																																																																																																																																																											<li class="breadcrumb-item">
+																																																																																																																																																																																												<a href="#">Home</a>
+																																																																																																																																																																																											</li>
+																																																																																																																																																																																											<li class="breadcrumb-item active" aria-current="page">Listing With Fullwidth</li>
+																																																																																																																																																																																										</ul>
+																																																																																																																																																																																									</nav>
+																																																																																																																																																																																								</div>
+																																																																																																																																																																																							</div>
+																																																																																																																																																																																							-->
 		</div>
 		<div class="dot-overlay"></div>
 	</section>
@@ -36,13 +36,13 @@
 						{{form_widget(form.categorie)}}
 
 						{# <select class="niceSelect">
-																																																																																											<option value="0">Toutes catégories</option>
-																																																																																											{% for cat in categories %}
-																																																																																												<option value="{{cat.id}}" {% if selectedBienId == cat.id %} selected {% endif %}>
-																																																																																													{{cat.getTypeCat()}}
-																																																																																												</option>
-																																																																																											{% endfor %}
-																																																																																										</select> #}
+																																																																																																																																																																																																																																																																			<option value="0">Toutes catégories</option>
+																																																																																																																																																																																																																																																																			{% for cat in categories %}
+																																																																																																																																																																																																																																																																				<option value="{{cat.id}}" {% if selectedBienId == cat.id %} selected {% endif %}>
+																																																																																																																																																																																																																																																																					{{cat.getTypeCat()}}
+																																																																																																																																																																																																																																																																				</option>
+																																																																																																																																																																																																																																																																			{% endfor %}
+																																																																																																																																																																																																																																																																		</select> #}
 
 					</div>
 				</div>
@@ -127,7 +127,7 @@
 														</li>
 														<li class="me-2">
 															favoriss :
-															{{ app.request.cookies.get('favoris') }}
+															{# {{ app.request.cookies.get('favoris') }} #}
 															<a href="{{ path('app_bien_add_to_favs', {'id' : bien.id}) }}">
 																<i class="fa fa-heart"></i>
 															</a>
@@ -195,23 +195,32 @@
 				<div class="row d-md-flex align-items-center justify-content-between text-lg-start text-center">
 					<div class="col-lg-9">
 						<h2 class="mb-0 white">
-							Looking for a dream home?
+							Envoyer tous vos favoris par mail ici.
 						</h2>
-						<p class="white">We can help you realize your dream of a new home</p>
-					</div>
-					<div class="col-lg-3">
-						<a href="" class="nir-btn-black float-lg-end float-none">Fine More Properties</a>
-					</div>
+						<form
+							action="{{ path('app_bien_send_favs') }}" class="emailForm">
+							{# <p class="white">Email:</p> #}
+							<div class="row col-lg-9">
+								<label class="white" for="email_porteur">Email:</label>
+								<input type="text" name="email_porteur" placeholder="Entrez votre adresse mail"/>
+								<button onclick="this.form.submit();" class="nir-btn-black float-lg-end float-none">Envoyer
+									<i class="fa fa-send"></i>
+								</button>
+							</div>
+						</div>
+
+					</form>
 				</div>
+
 			</div>
 		</div>
 	</div>
-	<!-- content-line ends -->
+</div>
+<!-- content-line ends -->
 
 
-	<!-- Back to top start -->
-	<div id="back-to-top">
-		<a href="#"></a>
-	</div>
-	<!-- Back to top ends -->
-{% endblock %}
+<!-- Back to top start -->
+<div id="back-to-top">
+	<a href="#"></a>
+</div>
+<!-- Back to top ends -->{% endblock %}
