--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -129,47 +129,15 @@
 			{% endblock header %}
 
 
+			{% block footer %}
+
+
 			{% block body %}
-				{% for message in app.flashes('success') %}
-					<div class="alert alert-success">
-						{{ message }}
-					</div>
-				{% endfor %}
-
-				{#{{ include ('bodyHome.html.twig',ignore_missing=true) }}#}
-				{# au lieu de faire un include , le code va plenté
-																c'est mieux d'utiliser la route directeent qui appelle la fonction et ce que le controleur doit faire
-																													#}
-				{{ render(controller('App\\Controller\\bodyController::index' )) }}
-
-
+				{{ include ('bodyHome.html.twig', {'biens' : biens}
+			) }}
 			{% endblock %}
 
 
-			{% block footer %}
-				<!-- footer starts -->
-				<footer class="pt-10 footermain">
-					<div class="footer-upper pb-4">
-						<div class="container">
-							<div class="row">
-								<div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-									<div class="footer-about">
-										<img src="images/logo-white.png" alt="">
-
-		{% block body %}
-			{{ include ('bodyHome.html.twig', {'biens' : biens}
-			) }}
-		{% endblock %}
-
-
-		{% block footer %}
-			{{ include ('newFooter.html.twig') }}
-		{% endblock %}
+		</html> 
 	</body>
-	<script src="{{asset("assets/js/jquery-3.5.1.min.js")}}"></script>
-	<script src="{{asset("assets/js/bootstrap.min.js")}}"></script>
-	<script src="{{asset("assets/js/plugin.js")}}"></script>
-	<script src="{{asset("assets/js/main.js")}}"></script>
-	<script src="{{asset("assets/js/custom-swiper.js")}}"></script>
-	<script src="{{asset("assets/js/custom-nav.js")}}"></script>
-</html></body></html></body></html>
+</html></body></html>
