--- a/templates/bien.html.twig
+++ b/templates/bien.html.twig
@@ -1,77 +1,25 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>
-			{% block title %}SAFER IMMOBILIER
-			{% endblock %}
+{% extends 'base.html.twig' %}
+<body>
+	{%form_theme formBien 'bootstrap_5_layout.html.twig'%}
 
-		</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link
-		rel="shortcut icon" type="image/x-icon" href="{{ asset("assets/images/favicon.png") }}">
-		<!-- Bootstrap core CSS -->
-		<link
-		href="{{ asset("assets/css/bootstrap.min.css") }}" rel="stylesheet" type="text/css">
-		<!--Custom CSS-->
-		<link
-		href="{{asset('assets/css/style.css')}}" rel="stylesheet" type="text/css">
-		<!--Custom CSS-->
-		<link
-		href="{{asset('assets/css/custom-style.css')}}" rel="stylesheet" type="text/css">
-		<!--Plugin CSS-->
-		<link
-		href="{{asset("assets/css/plugin.css")}}" rel="stylesheet" type="text/css">
-		<!--Flaticons CSS-->
-		<link
-		href="{{asset("assets/fonts/flaticon.css")}}" rel="stylesheet" type="text/css">
-		<!--Font Awesome-->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+	{% block body %}
+		<!-- banner starts -->
+		{{ form_start(formBien, {'attr' : {'id' :"form_ajout"} })}}
 
-		<link rel="stylesheet" href="{{asset("assets/fonts/line-icons.css")}}" type="text/css">
-		{% block stylesheets %}
-			{{ encore_entry_link_tags('app') }}
-		{% endblock %}
+		<h2>Ajout de bien</h2>
+
+		{{form_row(formBien.titre , {'attr' : {'placeholder' :"Titre"} })}}
+		{{form_row(formBien.prix , {'attr' : {'placeholder' :"Prix"} })}}
+		{{form_row(formBien.description , {'attr' : {'placeholder' :"Description"} })}}
+		{{form_row(formBien.ville , {'attr' : {'placeholder' :"Ville"} })}}
+		{{form_row(formBien.code_postal , {'attr' : {'placeholder' :"Code postal"} })}}
+		{{form_row(formBien.surface , {'attr' : {'placeholder' :"Surface"} })}}
 
 
-	</head>
-
-	<body>
-
-		{% block header %}
-			{{ include ('newHeader.html.twig') }}
-		{% endblock %}
-		{%form_theme formBien 'bootstrap_5_layout.html.twig'%}
-
-		{% block body %}
-			<!-- banner starts -->
-			{{ form_start(formBien, {'attr' : {'id' :"form_ajout"} })}}
-
-			<h2>Ajout de bien</h2>
-
-			{{form_row(formBien.titre , {'attr' : {'placeholder' :"Titre"} })}}
-			{{form_row(formBien.prix , {'attr' : {'placeholder' :"Prix"} })}}
-			{{form_row(formBien.description , {'attr' : {'placeholder' :"Description"} })}}
-			{{form_row(formBien.ville , {'attr' : {'placeholder' :"Ville"} })}}
-			{{form_row(formBien.code_postal , {'attr' : {'placeholder' :"Code postal"} })}}
-			{{form_row(formBien.surface , {'attr' : {'placeholder' :"Surface"} })}}
+		<button class="createaccount-btn">Ajouter</button>
 
 
-			<button class="createaccount-btn">Ajouter</button>
+		{{form_end(formBien)}}
 
-
-			{{form_end(formBien)}}
-
-		{% endblock %}
-		{% block footer %}
-			{{ include ('newFooter.html.twig') }}
-		{% endblock %}
-	</body>
-	<script src="{{asset("assets/js/jquery-3.5.1.min.js")}}"></script>
-	<script src="{{asset("assets/js/bootstrap.min.js")}}"></script>
-	<script src="{{asset("assets/js/plugin.js")}}"></script>
-	<script src="{{asset("assets/js/main.js")}}"></script>
-	<script src="{{asset("assets/js/custom-swiper.js")}}"></script>
-	<script src="{{asset("assets/js/custom-nav.js")}}"></script>
-</html></body></html></body></html></body></html>
+	{% endblock %}
+</body></html>
