--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -66,42 +66,42 @@
 
 								{{ form_start(formcontact) }}
 								<div class="form-group mb-2">
-									{{ form_widget(formcontact.nom,{'attr': {'class':'form-control','placeholder':'nom'}}) }}
+									{{ form_widget(formcontact.nom,{'attr': {'class':'form-control','placeholder':"nom"}}) }}
 								</div>
 								<div class="form-group mb-2">
-									{{ form_widget(formcontact.prenom,{'attr': {'class':'form-control','placeholder':'prenom'}}) }}
+									{{ form_widget(formcontact.prenom,{'attr': {'class':'form-control','placeholder':"prenom"}}) }}
 								</div>
 								<div class="form-group mb-2">
-									{{ form_widget(formcontact.mail,{'attr': {'class':'form-control','placeholder':'mail'}}) }}
+									{{ form_widget(formcontact.mail,{'attr': {'class':'form-control','placeholder':"mail"}}) }}
 								</div>
 								<div class="form-group mb-2">
-									{{ form_widget(formcontact.numero,{'attr': {'class':'form-control','placeholder':'numero'}}) }}
+									{{ form_widget(formcontact.numero,{'attr': {'class':'form-control','placeholder':"numero"}}) }}
 								</div>
 								<div class="textarea mb-2">
-									{{ form_widget(formcontact.content,{'attr': {'class':'form-control','placeholder':'content'}}) }}
+									{{ form_widget(formcontact.content,{'attr': {'class':'form-control','placeholder':"content"}}) }}
 								</div>
 
 
-								<input type="submit" class="nir-btn" id="submit2" value="Send Message">
+								<inpu type="submit" class="nir-btn" id="submit2" value="Send Message">
 
 
-								{{ form_end(formcontact )}}
+									{{ form_end(formcontact )}}
 
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</section>
+		<!-- contact Ends -->
+
+
+		<!-- Back to top start -->
+		<div id="back-to-top">
+			<a href="#"></a>
 		</div>
-	</section>
-	<!-- contact Ends -->
+		<!-- Back to top ends -->
 
 
-	<!-- Back to top start -->
-	<div id="back-to-top">
-		<a href="#"></a>
-	</div>
-	<!-- Back to top ends -->
-
-
-{% endblock %}
+	{% endblock %}
