Maintenance champ de recherche

--- a/templates/bien.html.twig
+++ b/templates/bien.html.twig
@@ -11,7 +11,7 @@
 		{{form_row(formBien.titre , {'attr' : {'placeholder' :"Titre"} })}}
 		{{form_row(formBien.prix , {'attr' : {'placeholder' :"Prix"} })}}
 		{{form_row(formBien.description , {'attr' : {'placeholder' :"Description"} })}}
-		{{form_row(formBien.ville , {'attr' : {'placeholder' :"Ville"} })}}
+		{{form_row(formBien.localisation , {'attr' : {'placeholder' :"localisation"} })}}
 		{{form_row(formBien.code_postal , {'attr' : {'placeholder' :"Code postal"} })}}
 		{{form_row(formBien.surface , {'attr' : {'placeholder' :"Surface"} })}}
 
