--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -49,7 +49,7 @@
 				</div>
 				<div class="form-group me-2">
 					<div class="input-box">
-						{{form_widget(form.ville)}}
+						{{form_widget(form.localisation)}}
 					</div>
 				</div>
 				<div class="form-group text-center w-100">
