formulaire contactez nous ok

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -82,26 +82,26 @@
 								</div>
 
 
-								<inpu type="submit" class="nir-btn" id="submit2" value="Send Message">
+								<input type="submit" class="nir-btn" id="submit2" value="Envoyer" onclick="this.form.submit();"/>
 
 
-									{{ form_end(formcontact )}}
+								{{ form_end(formcontact )}}
 
-								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
-		<!-- contact Ends -->
-
-
-		<!-- Back to top start -->
-		<div id="back-to-top">
-			<a href="#"></a>
 		</div>
-		<!-- Back to top ends -->
+	</section>
+	<!-- contact Ends -->
 
 
-	{% endblock %}
+	<!-- Back to top start -->
+	<div id="back-to-top">
+		<a href="#"></a>
+	</div>
+	<!-- Back to top ends -->
+
+
+{% endblock %}
