Fin du projet avec les statistique ok

--- a/templates/bodyHome.html.twig
+++ b/templates/bodyHome.html.twig
@@ -54,7 +54,7 @@
 												<img src="{{vich_uploader_asset(bien, 'imageFile' )}}" alt="" class="rounded-circle me-1">
 												<span>{{bien.titre}}</span>
 											</div>
-											<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">{{bien.status}}</a>
+											<a href="#" class="tags bg-theme2 white px-3 py-1">{{bien.status}}</a>
 										</div>
 									</div>
 
