--- a/templates/Bundles/EasyAdminBundles/welcome.html.twig
+++ b/templates/Bundles/EasyAdminBundles/welcome.html.twig
@@ -21,17 +21,21 @@
 				<span class="display-3">{{message['value'] }}</span>Message
 			</div>
 		</div>
+		<div class="col-6-alert-success">
+			<span class="display-3">{{fav['value'] }}</span>Bien par favoris
+		</div>
 		<div class="row">
+			{% for  favor in fav %}
+				<div class="col-12">
+					<ul class="list-group">
+						<li class="list-group-item d-flex justify-content-between align-items-center">
+							{{favor}}
+							<span class="badge badge-primary badge-pill">14</span>
+						</li>
 
-			<div class="col-12">
-				<ul class="list-group">
-					<li class="list-group-item d-flex justify-content-between align-items-center">
-						Cras justo odio
-						<span class="badge badge-primary badge-pill">14</span>
-					</li>
-
-				</ul>
-			</div>
+					</ul>
+				</div>
+			{% endfor %}
 		</div>
 	</div>
 {% endblock %}
