--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -72,7 +72,7 @@
 										<div class="trend-meta d-flex align-items-center justify-content-between box-shadow rounded">
 											<div class="entry-author">
 												<img src="{{ vich_uploader_asset(bien ,'imageFile')}}" alt="" class="rounded-circle me-1">
-												<span>Jenny Lofar</span>
+												<span>{{bien.getCodePostal()}}</span>
 											</div>
 											<a href="grid-leftfilter.html" class="tags bg-theme2 white px-3 py-1">{{bien.status}}</a>
 										</div>
