--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -192,4 +192,4 @@
 			{% endblock %}
 		</body>
 	</body>
-</html></footer><!-- footer ends --></body><script src="{{asset("assets/js/jquery-3.5.1.min.js")}}"></script><script src="{{asset("assets/js/bootstrap.min.js")}}"></script><script src="{{asset("assets/js/plugin.js")}}"></script><script src="{{asset("assets/js/main.js")}}"></script><script src="{{asset("assets/js/custom-swiper.js")}}"></script><script src="{{asset("assets/js/custom-nav.js")}}"></script></body></html></body></html></body></html>>>>>>>> 0f0f3f7b92bde09c193b147241542aa8d7902f5f
+</html></footer><!-- footer ends --></body><script src="{{asset("assets/js/jquery-3.5.1.min.js")}}"></script><script src="{{asset("assets/js/bootstrap.min.js")}}"></script><script src="{{asset("assets/js/plugin.js")}}"></script><script src="{{asset("assets/js/main.js")}}"></script><script src="{{asset("assets/js/custom-swiper.js")}}"></script><script src="{{asset("assets/js/custom-nav.js")}}"></script></body></html></body></html></body></html>
